--- a/index.html
+++ b/index.html
@@ -29,33 +29,33 @@
 </head>
 
 <body>
-  <div class="main-container">
+  <main class="main-container">
 
-    <div class="card">
-  
-      <div class="avatar">
-        <img src="images/image-victor.jpg" alt="avatar">
+    <article class="user-card">
+
+      <div class="user-card__avatar">
+        <img src="images/image-victor.jpg" alt="user avatar">
       </div>
-      <div class="info">
-        <span class="enfasis">Victor Crest</span>
+      <div class="user-card__info">
+        <span class="user-card--text-accent">Victor Crest</span>
         26 <br>
-        <p class="city">London</p>
+        <p class="user-card__location">London</p>
       </div>
-    <div class="stats">
-      <div class="data">
-        <span class="enfasis">80K</span> <br>
-        <p>Followers</p>
+      <div class="user-card__stats">
+        <div class="user-card__data">
+          <span class="user-card--text-accent">80K</span> <br>
+          <p>Followers</p>
+        </div>
+        <div class="user-card__data">
+          <span class="user-card--text-accent">803K</span> <br>
+          <p>Likes</p>
+        </div>
+        <div class="user-card__data">
+          <span class="user-card--text-accent">1.4K</span> <br>
+          <p>Photos</p>
+        </div>
       </div>
-      <div class="data">
-        <span class="enfasis">803K</span> <br>
-        <p>Likes</p>
-      </div>
-      <div class="data">
-        <span class="enfasis">1.4K</span> <br>
-        <p>Photos</p>
-      </div>
-    </div>
-    </div>
+    </article>
   </div>
 
   <!-- <div class="attribution">
